--- a/style.css
+++ b/style.css
@@ -3,3 +3,38 @@ body {
   height: 100%;
   margin: 0;
 }
+
+head{
+  text-align: center;
+}
+
+.caption{
+  text-align: center;
+}
+
+img{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+#nav {
+  padding: 10px;
+  background-color: red;
+}
+
+.Info {
+  width: 25%;
+  text-align: center;
+  float: left;
+  background-color: red;
+  display: flex;
+
+}
+
+featured-property #p {
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  width: 800px;
+}
